<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/basic_settings">

        <EditTextPreference
            android:defaultValue="empty_user_name"
            android:key="full_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/you_name"
            android:dialogMessage="@string/edit_you_name"
            android:inputType="textCapWords"
            android:summary="@string/change_your_name"/>

        <EditTextPreference
            android:defaultValue="This text you can change"
            android:key="nizniy_text_header"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/welcome_text"
            android:summary="@string/change_the_greeting_text"
            android:dialogTitle="@string/enter_new_text"
            android:inputType="text"/>

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/kolichestvo_strok_top_note"
            android:entryValues="@array/kolichestvo_strok_top_note_values"
            android:key="kilichestvo_strok_top_note"
            android:title="@string/Number_of_lines"
            android:summary="@string/change_the_number_of_lines"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/customization_text">

        <ListPreference
            android:defaultValue="Fiolet"
            android:entries="@array/theme_app"
            android:entryValues="@array/theme_app_val"
            android:key="theme_app"
            android:title="@string/theme_app"
            android:summary="@string/choose_a_theme_for_application" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="fab_enabled"
            android:title="@string/activate_add_button"
            android:summary="@string/button_on_home_screen"/>

        <ListPreference
            android:defaultValue="Orange"
            android:entries="@array/color_fab_add"
            android:entryValues="@array/color_fab_add_values"
            android:key="color_fab_add"
            android:dependency="fab_enabled"
            android:title="@string/Add_button_color"
            android:summary="@string/change_color_button_add"/>

        <ListPreference
            android:defaultValue="note"
            android:entries="@array/fab_on_click"
            android:entryValues="@array/fab_on_click_values"
            android:dependency="fab_enabled"
            android:key="fab_on_click_val"
            android:title="@string/pressing_button"
            android:summary="@string/change_actions_you_click_button"/>


    </PreferenceCategory>


</PreferenceScreen>