<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passwords.GeneratorPasswordActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_generator"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/generator_passwords"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_line"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="@font/product_sans_medium_italic"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/generate_me"/>

    <ImageView
        android:id="@+id/password_line"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_centerInParent="true"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:src="@drawable/line_black"/>

    <ImageButton
        android:id="@+id/generate_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/for_buttons_blue"
        app:srcCompat="@drawable/ic_generate"
        android:layout_marginStart="75sp"
        android:layout_marginTop="20sp"
        android:shadowColor="#c4c4c4"
        android:elevation="6dp"
        android:layout_below="@+id/password_text" />

    <ImageButton
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/for_buttons_blue"
        android:shadowColor="#c4c4c4"
        android:elevation="6dp"
        app:srcCompat="@drawable/ic_save" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lengthPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="30sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@+id/generate_password"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lengthPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_length"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lengthPasswordLayout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5sp"
        android:checked="true"
        android:text="@string/special_symbols" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewGenerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8796490674446763/6987887120">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>