<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativeLayout_topNote"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notebook.TopNoteActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_note_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_black_arrow_back_24"
        app:title=" "
        android:visibility="invisible"
        app:menu="@menu/menu_top_note"
        style="@style/Widget.MaterialComponents.Toolbar.Surface" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_note_top_dark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_black_arrow_back_24"
        app:title=" "
        android:visibility="invisible"
        app:menu="@menu/menu_top_note_dark"
        style="@style/Widget.MaterialComponents.Toolbar.Surface" />

    <View
        android:id="@+id/theme_top_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topAppBar_note_top" />

    <EditText
        android:id="@+id/name_note_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_text"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_marginStart="15dp"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:layout_below="@id/topAppBar_note_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:layout_below="@id/name_note_top">

        <EditText
            android:id="@+id/note_text_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:hint="@string/text_note"
            android:textSize="15sp"
            app:borderWidth="0dp"
            android:background="@null"
            android:padding="8dp"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_new_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:icon="@drawable/ic_baseline_done_white_24"
        app:iconTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp" />

</RelativeLayout>