<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:src="@drawable/line_gray_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/text_acton_passwords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actions_with_passwords"
        android:fontFamily="@font/product_sans_black"
        android:textSize="23sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/text_acton_passwords">

        <RelativeLayout
            android:id="@+id/delete_passwords_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/icon_del_passwords"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_delete_outline_24"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_text"
                android:textSize="17sp"
                android:layout_toEndOf="@id/icon_del_passwords"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/copy_content_bottom_passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/icon_copy_passwords"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_content_copy_24"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_content"
                android:textSize="17sp"
                android:layout_toEndOf="@id/icon_copy_passwords"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/share_content_bottom_passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/icon_share_passwords"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_outline_share_24"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="17sp"
                android:layout_toEndOf="@id/icon_share_passwords"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>