<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".links.AddLinkActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snak_layout_links"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_more_bottom_link"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_add_link"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_black_arrow_back_24"
        app:title=" "
        android:elevation="4dp"
        style="@style/Widget.MaterialComponents.Toolbar.Surface" />

    <View
        android:id="@+id/theme_link"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topAppBar_add_link"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_link_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_done_white_24"
        app:tint="@color/colorWhite"
        app:borderWidth="0dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/link_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_launch_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/topAppBar_add_link">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/link_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/link_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_for_link"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/link_edit_text_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_link_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_below="@id/link_name_text_layout">

        <EditText
            android:id="@+id/note_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:hint="@string/note_for_link"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:background="@null"
            android:padding="8dp"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_more_bottom_link"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/date_textView_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_medium"
                android:textColor="@android:color/black"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/more_links"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="11dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:layout_marginEnd="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>